<package>
  <name>neato_node</name>
  <version>0.2.0</version>
  <description>
    A node wrapper for the neato_driver package
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="ferguson@cs.albany.edu">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/neato_node</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>camera_info_manager</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>camera_info_manager</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>neato_driver</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
